# data-analyst-assessment

./: README.md  clair_analysis.ipynb  pyproject.toml  test.ipynb
data/: events.csv  users.csv
