[tool.poetry]
name = "data-analyst-assessment"
version = "0.1.0"
description = ""
authors = ["lynma01 <lynma01@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.8"
pandas = "^1.3.5"
numpy = "^1.21.5"
pandas-profiling = "^3.1.0"
matplotlib = "^3.5.1"
ipykernel = "^6.6.0"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
